[package]
name = "voxfor-quantum-tls"
version = "1.0.0"
edition = "2021"
authors = ["Netanel Siboni <netanel@voxfor.com>"]
description = "Production-grade quantum-resistant TLS/SSL implementation"
license = "MIT"
repository = "https://github.com/voxforlifetime/voxfor-quantum-tls"
keywords = ["quantum", "cryptography", "tls", "post-quantum", "security"]
categories = ["cryptography", "network-programming"]

[lib]
name = "voxfor_quantum_tls"
path = "src/lib.rs"

[[bin]]
name = "voxctl"
path = "src/bin/voxctl.rs"

[dependencies]
# Core cryptography
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
sha3 = "0.10"
hmac = "0.12"
chacha20poly1305 = "0.10"
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Encoding
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

# Async (optional)
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["std"]
std = []
# SECURITY WARNING: Only enable for testing!
# Allows skipping hostname verification (DEFEATS TLS SECURITY!)
insecure-skip-hostname = []
# Enable persistent nonce database for distributed deployments
persistent-nonce-db = []
async = ["tokio", "async-trait"]
hardware-accel = []
hybrid-mode = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[[bench]]
name = "vlk1_bench"
harness = false
